# tracktion_engine

./: CMakeLists.txt
.github/workflows/: sync-upstream.yml
examples/Benchmarks/: CMakeLists.txt
examples/TestRunner/: CMakeLists.txt
modules/tracktion_engine/audio_files/: tracktion_AudioFile.test.cpp
modules/tracktion_engine/model/automation/modifiers/: tracktion_LFOModifier.cpp  tracktion_LFOModifier.h
modules/tracktion_engine/model/clips/: tracktion_AudioClipBase.cpp  tracktion_ClipEffects.cpp  tracktion_WarpTimeManager.cpp  tracktion_WarpTimeManager.h
modules/tracktion_engine/model/edit/: tracktion_Edit.cpp
modules/tracktion_engine/playback/graph/: tracktion_ArrangerLauncherSwitchingNode.cpp  tracktion_EditNodeBuilder.cpp  tracktion_SlotControlNode.cpp
modules/tracktion_engine/plugins/effects/: tracktion_FourOscPlugin.cpp
